:fire: Change redirect to rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-    "redirects": [
+    "rewrites": [
       {
         "source": "/blog/:path*",
-        "destination": "https://test2-ten-beta.vercel.app/blog/:path*",
-        "permanent": false
+        "destination": "https://test2-ten-beta.vercel.app/blog/:path*"
       }
     ]
   }
