--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
     "routes": [
         {
-            "src": "/blog/",
+            "src": "/blog",
             "dest": "https://test2-ten-beta.vercel.app/blog/"
         },
 
         {
-            "src": "/blog/(.*?)([.]\\w{2,5})(\\?[^/]+)?/",
-            "dest": "https://test2-ten-beta.vercel.app/$1$2$3/"
+            "src": "/blog/(.*?)([.]\\w{2,5})(\\?[^/]+)?",
+            "dest": "https://test2-ten-beta.vercel.app/$1$2$3"
         },
 
         {
-            "src": "/blog/([\\S\\s]+)/",
+            "src": "/blog/([\\S\\s]+)",
             "dest": "https://test2-ten-beta.vercel.app/$1/"
         }
     ]
