--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,7 @@
     "routes": [
         {
             "src": "/blog",
-            "dest": "https://test2-ten-beta.vercel.app/blog/"
-        },
-
-        {
-            "src": "/blog/(.*?)([.]\\w{2,5})(\\?[^/]+)?",
-            "dest": "https://test2-ten-beta.vercel.app/$1$2$3"
-        },
-
-        {
-            "src": "/blog/([\\S\\s]+)",
-            "dest": "https://test2-ten-beta.vercel.app/$1/"
-        }
+            "dest": "https://test2-ten-beta.vercel.app/blog"
+        }    
     ]
 }
