:bug: Change config

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "routes": [
         {
-            "src": "/blog",
-            "dest": "https://test2-ten-beta.vercel.app/blog"
+            "src": "/blog/:path*",
+            "dest": "https://test2-ten-beta.vercel.app/blog/:path*"
         }    
     ]
 }
