--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,18 @@
     "routes": [
         {
             "src": "/blog",
-            "dest": "https://test2-ten-beta.vercel.app/blog"
+            "dest": "https://blog-staging.reebee.com/blog"
         },
-
+  
         {
             "src": "/blog/(.*?)([.]\\w{2,5})(\\?[^/]+)?",
-            "dest": "https://test2-ten-beta.vercel.app/blog/$1$2$3"
+            "dest": "https://blog-staging.reebee.com/blog/$1$2$3"
         },
-
+  
         {
             "src": "/blog/([\\S\\s]+)",
-            "dest": "https://test2-ten-beta.vercel.app/blog/$1"
+            "dest": "https://blog-staging.reebee.com/blog/$1"
         }
     ]
-}
+  }
+  
