--- a/.github/workflows/approve-bot.yml
+++ b/.github/workflows/approve-bot.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
     - name: Check if comment contains keyword
       run: |
+        echo "$GITHUB_HEAD_REF"
         if [[ "$GITHUB_EVENT_NAME" == "issue_comment" ]]; then
           comment_body=$(jq -r .comment.body "$GITHUB_EVENT_PATH")
           if [[ "$comment_body" == "approve" ]]; then
@@ -31,4 +32,3 @@ jobs:
           else
             echo "Comment does not contain keyword 'approve', no action taken."
           fi
-        fi
