--- a/.github/workflows/approve-bot.yml
+++ b/.github/workflows/approve-bot.yml
@@ -8,29 +8,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check if comment contains keyword
-      run: |
-        if [[ "$GITHUB_EVENT_NAME" == "issue_comment" ]]; then
-          echo "${GITHUB_HEAD_REF}"
-
-          comment_body=$(jq -r .comment.body "$GITHUB_EVENT_PATH")
-          if [[ "$comment_body" == "approve" ]]; then
-            echo "Comment contains keyword 'approve', proceeding with PR approval."
-            pr_number=$(jq -r .issue.number "$GITHUB_EVENT_PATH")
-            repo_name=$(jq -r .repository.name "$GITHUB_EVENT_PATH")
-            repo_owner=$(jq -r .repository.owner.login "$GITHUB_EVENT_PATH")
-            echo "Getting reviews for PR #$pr_number in $repo_owner/$repo_name."
-            reviews=$(curl -s -X GET -H "Authorization: token $TOKEN" https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/reviews)
-            review_id=$(echo $reviews | jq -r '.[].id')
-            echo "Approving review #$review_id for PR #$pr_number in $repo_owner/$repo_name."
-            curl \
-              -X POST \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer $TOKEN"\
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/reviews/$review_id/events \
-              -d '{"event":"APPROVE"}'
-          else
-            echo "Comment does not contain keyword 'approve', no action taken."
-          fi
-        fi
+    - name: Get current branch name
+      run: | 
+        echo "Current branch: $GITHUB_HEAD_REF"
