--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -11,6 +11,7 @@ jobs:
     - name: "Check branch"
       run: | 
         echo "Current branch: $GITHUB_HEAD_REF"
+
     - name: Check if review is approved
       run: |
         if [[ "$GITHUB_EVENT_NAME" == "pull_request_review" ]]; then
@@ -22,7 +23,13 @@ jobs:
             repo_owner=$(jq -r .repository.owner.login "$GITHUB_EVENT_PATH")
             jira_ticket_number='JIRA-123'  # replace this with your actual Jira ticket number
             echo "Posting comment with Jira ticket number $jira_ticket_number on PR #$pr_number in $repo_owner/$repo_name."
-            curl -s -X POST -H "Authorization: Bearer $TOKEN" https://api.github.com/repos/$repo_owner/$repo_name/issues/$pr_number/comments -d "{\"body\":\"This PR is related to Jira ticket $jira_ticket_number\"}"
+            curl \
+              -X POST \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer $GITHUB_TOKEN"\
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/comments \
+              -d '{"body":"Great stuff! $jira_ticket_number"}'
           else
             echo "PR review is not approved, no action taken."
           fi
