--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -8,29 +8,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: "Check branch"
-      run: | 
-        echo "Current branch: $GITHUB_HEAD_REF"
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Check if review is approved
-      run: |
-        if [[ "$GITHUB_EVENT_NAME" == "pull_request_review" ]]; then
-          review_state=$(jq -r .review.state "$GITHUB_EVENT_PATH")
-          if [[ "$review_state" == "approved" ]]; then
-            echo "PR review is approved, proceeding with commenting Jira ticket number."
-            pr_number=$(jq -r .pull_request.number "$GITHUB_EVENT_PATH")
-            repo_name=$(jq -r .repository.name "$GITHUB_EVENT_PATH")
-            repo_owner=$(jq -r .repository.owner.login "$GITHUB_EVENT_PATH")
-            jira_ticket_number='JIRA-123'  # replace this with your actual Jira ticket number
-            echo "Posting comment with Jira ticket number $jira_ticket_number on PR #$pr_number in $repo_owner/$repo_name."
-            curl \
-              -X POST \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer $GITHUB_TOKEN"\
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/comments \
-              -d '{"body":"Great stuff! $jira_ticket_number"}'
-          else
-            echo "PR review is not approved, no action taken."
-          fi
-        fi
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            Hello world ! :wave:
