--- a/.github/workflows/approve-bot.yml
+++ b/.github/workflows/approve-bot.yml
@@ -17,8 +17,17 @@ jobs:
             pr_number=$(jq -r .issue.number "$GITHUB_EVENT_PATH")
             repo_name=$(jq -r .repository.name "$GITHUB_EVENT_PATH")
             repo_owner=$(jq -r .repository.owner.login "$GITHUB_EVENT_PATH")
-            echo "Approving PR #$pr_number in $repo_owner/$repo_name."
-            curl -s -X PUT -H "Authorization: Bearer $TOKEN" https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/reviews -d "{\"event\":\"APPROVE\"}"
+            echo "Getting reviews for PR #$pr_number in $repo_owner/$repo_name."
+            reviews=$(curl -s -X GET -H "Authorization: token $GITHUB_TOKEN" https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/reviews)
+            review_id=$(echo $reviews | jq -r '.[].id')
+            echo "Approving review #$review_id for PR #$pr_number in $repo_owner/$repo_name."
+            curl \
+              -X POST \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer $GITHUB_TOKEN"\
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/reviews/$review_id/events \
+              -d '{"event":"APPROVE"}'
           else
             echo "Comment does not contain keyword 'approve', no action taken."
           fi
