--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -15,4 +15,4 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            Hello world ! :wave:
+            Current branch is `$(echo ${{ github.head_ref }} | sed 's/off-\([0-9]*\).*/\1/')`.
