--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -1,7 +1,7 @@
 name: Comment with Jira Ticket Number Once Approved
 on:
-  pull_request_review:
-    types: [submitted, edited, dismissed]
+  pull_request
+
 
 jobs:
   comment:
