--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -18,4 +18,4 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            Current branch is off-${{ steps.jira-number.outputs.jira_ticket_number }}.
+            ${{ steps.jira-number.outputs.jira_ticket_number }}
