--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -16,11 +16,11 @@ jobs:
         run: echo "state=$(jq -r .review.state "$GITHUB_EVENT_PATH")" >> $GITHUB_OUTPUT
 
       - name: Current branch
-        run: echo ${{ github.head_ref }}
+        run: echo ${GITHUB_REF##*/}
 
       - name: Get jira_ticket_number
         id: jira-number
-        run: echo "jira_ticket_number=$(echo ${{ github.head_ref }} | sed -E 's/off-([0-9]*).*/off-\1/')" >> $GITHUB_OUTPUT
+        run: echo "jira_ticket_number=$(echo ${GITHUB_REF##*/} | sed -E 's/off-([0-9]*).*/off-\1/')" >> $GITHUB_OUTPUT
         
       - name: Comment PR
         if: ${{ steps.review-state.outputs.state == 'approved' }}
