--- a/.github/workflows/approve-bot.yml
+++ b/.github/workflows/approve-bot.yml
@@ -19,6 +19,7 @@ jobs:
             repo_owner=$(jq -r .repository.owner.login "$GITHUB_EVENT_PATH")
             echo "Getting reviews for PR #$pr_number in $repo_owner/$repo_name."
             reviews=$(curl -s -X GET -H "Authorization: Bearer $GITHUB_TOKEN" https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/reviews)
+            echo $reviews
             review_id=$(echo $reviews | jq -r '.[].id')
             echo "Approving review #$review_id for PR #$pr_number in $repo_owner/$repo_name."
             curl \
