--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -23,7 +23,7 @@ jobs:
         if: steps.branch-name.outputs.is_default == 'false'
         id: jira-number
         run: |
-          echo ${{ steps.branch-name.outputs.current_branch }}
+          echo ${GITHUB_REF}
           echo "jira_ticket_number=$(echo ${{ steps.branch-name.outputs.current_branch }} | sed -E 's/off-([0-9]*).*/off-\1/')" >> $GITHUB_OUTPUT
         
       - name: Comment PR
