--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -17,7 +17,25 @@ jobs:
 
       - name: Get branch name
         id: branch-name
-        run: echo "branch=$(jq -r .pull_request.head.ref "$GITHUB_EVENT_PATH")" >> $GITHUB_OUTPUT
+        run: |
+          pr_number=$(jq -r .issue.number "$GITHUB_EVENT_PATH")
+
+          # Get the repository name and owner from the event payload
+          repo_name=$(jq -r .repository.name "$GITHUB_EVENT_PATH")
+          repo_owner=$(jq -r .repository.owner.login "$GITHUB_EVENT_PATH")
+
+          # Get the branch name using the GitHub API
+          branch_name=$(
+          curl \
+              -X POST \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer $GITHUB_TOKEN"\
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number | jq -r .head.ref
+          )
+          echo $branch_name
+          echo "branch=$branch_name >> $GITHUB_OUTPUT
+
 
       - name: Get jira_ticket_number
         if: steps.branch-name.outputs.is_default == 'false'
