--- a/.github/workflows/approve-bot.yml
+++ b/.github/workflows/approve-bot.yml
@@ -3,6 +3,9 @@ on:
   issue_comment:
     types: [created]
 
+env: 
+  GITHUB_TOKEN: ${{secrets.$GITHUB_TOKEN}}
+
 jobs:
   approve:
     runs-on: ubuntu-latest
