--- a/.github/workflows/approve-bot.yml
+++ b/.github/workflows/approve-bot.yml
@@ -24,7 +24,7 @@ jobs:
             reviews=$(
               curl \
                 -H "Accept: application/vnd.github+json" \
-                -H "Authorization: Bearer $TOKEN"\
+                -H "Authorization: Bearer $GITHUB_TOKEN"\
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/reviews
             )
@@ -34,7 +34,7 @@ jobs:
             curl \
               -X POST \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer $TOKEN"\
+              -H "Authorization: Bearer $GITHUB_TOKEN"\
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/reviews/$review_id/events \
               -d '{"event":"APPROVE"}'
