--- a/.github/workflows/approve-bot.yml
+++ b/.github/workflows/approve-bot.yml
@@ -4,7 +4,7 @@ on:
     types: [created]
 
 env: 
-  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  GITHUB_TOKEN: ${{secrets.TOKEN}}
 
 jobs:
   approve:
