--- a/.github/workflows/approve-bot.yml
+++ b/.github/workflows/approve-bot.yml
@@ -1,44 +1,13 @@
-name: Approve PR on Comment
-on:
-  issue_comment:
-    types: [created]
-
-env: 
-  GITHUB_TOKEN: ${{secrets.TOKEN}}
-
+name: Automatic pull request review
+on: [pull_request]
 jobs:
-  approve:
+  automate-pullrequest-review:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Check if comment contains keyword
-      run: |
-        if [[ "$GITHUB_EVENT_NAME" == "issue_comment" ]]; then
-          comment_body=$(jq -r .comment.body "$GITHUB_EVENT_PATH")
-          if [[ "$comment_body" == "approve" ]]; then
-            echo "Comment contains keyword 'approve', proceeding with PR approval."
-            pr_number=$(jq -r .issue.number "$GITHUB_EVENT_PATH")
-            repo_name=$(jq -r .repository.name "$GITHUB_EVENT_PATH")
-            repo_owner=$(jq -r .repository.owner.login "$GITHUB_EVENT_PATH")
-            echo "Getting reviews for PR #$pr_number in $repo_owner/$repo_name."
-            reviews=$(
-              curl \
-                -H "Accept: application/vnd.github+json" \
-                -H "Authorization: Bearer $GITHUB_TOKEN"\
-                -H "X-GitHub-Api-Version: 2022-11-28" \
-                https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/reviews
-            )
-            echo $reviews
-            review_id=$(echo $reviews | jq -r '.[].id')
-            echo "Approving review #$review_id for PR #$pr_number in $repo_owner/$repo_name."
-            curl \
-              -X POST \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer $GITHUB_TOKEN"\
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/reviews/$review_id/events \
-              -d '{"event":"APPROVE"}'
-          else
-            echo "Comment does not contain keyword 'approve', no action taken."
-          fi
-        fi
+      - name: Approve pull request
+        if: github.actor == 'dependabot[bot]'
+        uses: andrewmusgrave/automatic-pull-request-review@0.0.5
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          event: APPROVE
+          body: 'Thank you dependabot 🎊'
