--- a/.github/workflows/approve-bot.yml
+++ b/.github/workflows/approve-bot.yml
@@ -1,20 +1,10 @@
-name: Dependabot auto-approve
-on: pull_request
-
-permissions:
-  pull-requests: write
+name: Auto approve
+on: pull_request_target
 
 jobs:
-  dependabot:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
-      - name: Dependabot metadata
-        id: metadata
-        uses: dependabot/fetch-metadata@v1.1.1
-        with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - name: Approve a PR
-        run: gh pr review --approve "$PR_URL"
-        env:
-          PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - uses: hmarr/auto-approve-action@v3
