--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -1,24 +1,19 @@
-name: Extract off-number on PR approve
+name: Comment Jira Number
 on:
   pull_request_review:
     types: [submitted]
 
 jobs:
-  extract-off-number:
+  extract-jira-number:
     runs-on: ubuntu-latest
-
     steps:
     - name: Check if review is approved
+      id: jira-ticket-number
       if: ${{ github.event.review.state == 'approved' }}
       run: |
-        # Get the PR number from the event payload
         pr_number=${{ github.event.pull_request.number }}
-
-        # Get the repository name and owner from the event payload
         repo_name=${{ github.event.repository.name }}
         repo_owner=${{ github.event.repository.owner.login }}
-
-        # Get the commit message of the head commit
         commit_message=$(
           curl \
             -H "Accept: application/vnd.github+json" \
@@ -26,100 +21,12 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
             https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/commits | jq -r .[0].commit.message
         )
-        echo "Commit message: $commit_message"
-
-        # Extract the "off-{number}" from the commit message
-        off_number=$(echo $commit_message | grep -oP 'off-[0-9]+')
-        echo "off-number: $off_number"
-
-# name: Comment with Jira Ticket Number Once Approved
-# on:
-#   pull_request_review:
-#     types: [submitted]
-
-# jobs:
-#   comment:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-
-#       - name: Review State
-#         id: review-state
-#         run: echo "state=$(jq -r .review.state "$GITHUB_EVENT_PATH")" >> $GITHUB_OUTPUT
-
-#       - name: Get branch name
-#         id: branch-name
-#         run: |
-#           pr_number=$(jq -r .issue.number "$GITHUB_EVENT_PATH")
-
-#           # Get the repository name and owner from the event payload
-#           repo_name=$(jq -r .repository.name "$GITHUB_EVENT_PATH")
-#           repo_owner=$(jq -r .repository.owner.login "$GITHUB_EVENT_PATH")
-
-#           # Get the branch name using the GitHub API
-#           branch_name=$(
-#           curl \
-#               -X POST \
-#               -H "Accept: application/vnd.github+json" \
-#               -H "Authorization: Bearer $GITHUB_TOKEN"\
-#               -H "X-GitHub-Api-Version: 2022-11-28" \
-#               https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number | jq -r .head.ref
-#           )
-#           echo $branch_name
-#           echo "branch=$branch_name" >> $GITHUB_OUTPUT
-
-
-#       - name: Get jira_ticket_number
-#         if: steps.branch-name.outputs.is_default == 'false'
-#         id: jira-number
-#         run: |
-#           echo ${{ steps.branch-name.outputs.branch }}
-#           echo "jira_ticket_number=$(echo ${{ steps.branch-name.outputs.branch }} | sed -E 's/off-([0-9]*).*/off-\1/')" >> $GITHUB_OUTPUT
         
-#       - name: Comment PR
-#         if: ${{ steps.review-state.outputs.state == 'approved' }}
-#         uses: thollander/actions-comment-pull-request@v2
-#         with:
-#           message: |
-#             jira ticket ${{ steps.jira-number.outputs.jira_ticket_number }}
-#      - name: Review State
-#        id: review-state
-#        run: echo "state=$(jq -r .review.state "$GITHUB_EVENT_PATH")" >> $GITHUB_OUTPUT
-#
-#      - name: Get branch name
-#        id: branch-name
-#        run: |
-#          pr_number=$(jq -r .issue.number "$GITHUB_EVENT_PATH")
-#
-#          # Get the repository name and owner from the event payload
-#          repo_name=$(jq -r .repository.name "$GITHUB_EVENT_PATH")
-#          repo_owner=$(jq -r .repository.owner.login "$GITHUB_EVENT_PATH")
-#
-#          # Get the branch name using the GitHub API
-#          branch_name=$(
-#          curl \
-#              -X POST \
-#              -H "Accept: application/vnd.github+json" \
-#              -H "Authorization: Bearer $GITHUB_TOKEN"\
-#              -H "X-GitHub-Api-Version: 2022-11-28" \
-#              https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number | jq -r .head.ref
-#         )
-#          echo $branch_name
-#          echo "branch=$branch_name" >> $GITHUB_OUTPUT
+        echo "jira_number=$(echo $commit_message | grep -oP 'off-[0-9]+')" >> $GITHUB_OUTPUT
 
-
-#      - name: Get jira_ticket_number
-#        if: steps.branch-name.outputs.is_default == 'false'
-#        id: jira-number
-#        run: |
-#          echo ${{ steps.branch-name.outputs.branch }}
-#          echo "jira_ticket_number=$(echo ${{ steps.branch-name.outputs.branch }} | sed -E 's/off-([0-9]*).*/off-\1/')" >> $GITHUB_OUTPUT
-#        
-#      - name: Comment PR
-#        if: ${{ steps.review-state.outputs.state == 'approved' }}
-#        uses: thollander/actions-comment-pull-request@v2
-#        with:
-#          message: |
-#            jira ticket ${{ steps.jira-number.outputs.jira_ticket_number }}
+    - name: Comment PR
+      if: ${{ steps.review-state.outputs.state == 'approved' }}
+      uses: thollander/actions-comment-pull-request@v2
+      with:
+        message: |
+          ${{ steps.jira-ticket-number.output.jira_number }}
