--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -25,7 +25,7 @@ jobs:
         echo "jira_number=$(echo $commit_message | grep -oP 'off-[0-9]+')" >> $GITHUB_OUTPUT
 
     - name: Comment PR
-      if: ${{ steps.review-state.outputs.state == 'approved' }}
+      if: ${{ github.event.review.state == 'approved' }}
       uses: thollander/actions-comment-pull-request@v2
       with:
         message: |
