--- a/.github/workflows/pr-approve-bot.yml
+++ b/.github/workflows/pr-approve-bot.yml
@@ -8,7 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Check if review is approved
-      id: jira-ticket-number
       if: ${{ github.event.review.state == 'approved' }}
       run: |
         pr_number=${{ github.event.pull_request.number }}
@@ -22,11 +21,12 @@ jobs:
             https://api.github.com/repos/$repo_owner/$repo_name/pulls/$pr_number/commits | jq -r .[0].commit.message
         )
         
-        echo "jira_number=$(echo $commit_message | grep -oP 'off-[0-9]+')" >> $GITHUB_OUTPUT
+        jira_number=$(echo $commit_message | grep -oP 'off-[0-9]+')
+        echo "Posting comment with Jira ticket number $jira_number on PR #$pr_number in $repo_owner/$repo_name."
 
-    - name: Comment PR
-      if: ${{ github.event.review.state == 'approved' }}
-      uses: thollander/actions-comment-pull-request@v2
-      with:
-        message: |
-          ${{ steps.jira-ticket-number.output.jira_number }}
+        curl \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
+          https://api.github.com/repos/$repo_owner/$repo_name/issues/$pr_number/comments\
+          -d "{\"body\":\"$jira_number\"}"
